name:           hquantlib
version:        0.0.4.0
license:        LGPL
license-file:   LICENSE
author:         Pavel Ryzhov
maintainer:     Pavel Ryzhov <pavel.ryzhov@gmail.com>
category:       Finance
synopsis:       HQuantLib is a port of essencial parts of QuantLib to Haskell
description:    HQuantLib is intended to be a functional style port of QuantLib (http://quantlib.org)
build-type:     Simple
stability:      alpha
homepage:       http://github.com/paulrzcz/hquantlib.git
cabal-version:  >= 1.18.0

source-repository head
        type:           git
        location:       https://github.com/paulrzcz/hquantlib.git

source-repository this
        type:           git
        location:       https://github.com/paulrzcz/hquantlib.git
        tag:            0.0.3.4

flag optimize
        description : Enable optimizations for library and benchmarks
        default     : True

library
        default-language: Haskell2010
        exposed-modules:
                QuantLib
                QuantLib.Event
                QuantLib.Instruments
                QuantLib.Currencies
                QuantLib.Stochastic
                QuantLib.Priceable
                QuantLib.PricingEngines
                QuantLib.PricingEngines.BlackFormula
                QuantLib.Quotes
                QuantLib.Time
                QuantLib.TimeSeries
                QuantLib.Money
                QuantLib.Math
                QuantLib.Math.Copulas
                QuantLib.Models
                QuantLib.Models.Volatility
                QuantLib.Prices
                QuantLib.Position
                QuantLib.Options
                QuantLib.Methods.MonteCarlo
                QuantLib.Methods.Pricer

        other-modules:
                QuantLib.Currencies.America
                QuantLib.Currencies.Europe
                QuantLib.Instruments.Instrument
                QuantLib.Instruments.Stock
                QuantLib.Stochastic.Discretize
                QuantLib.Stochastic.Process
                QuantLib.Stochastic.Random
                QuantLib.Currency
                QuantLib.Time.Date
                QuantLib.Time.DayCounter
                QuantLib.Math.InverseNormal
                QuantLib.Stochastic.PureMT

        build-depends:
                        base                    >3              && <5,
                        random                  >= 1.0          && < 2.0,
                        time                    >= 1.4.0.0      && < 1.7.0.0,
                        containers              >= 0.5.0.0      && < 0.6.0.0,
                        hmatrix                 >= 0.17.0.0     && < 0.19.0.0,
                        hmatrix-gsl             >= 0.17.0.0     && < 0.19.0.0,
                        hmatrix-special         >= 0.4.0        && < 0.5.0,
                        parallel                >= 3.2.0.0      && < 3.3.0.0,
                        mersenne-random-pure64  >= 0.2.0.0      && < 0.3.0.0,
                        statistics              >= 0.13.0.0     && < 0.15.0.0,
                        vector                  >= 0.11.0.0     && < 0.13.0.0,
                        vector-algorithms       >= 0.7.0.0    && < 0.8.0.0

        hs-source-dirs: src
        ghc-options:    -Wall
        if flag(optimize)
                ghc-options: -funbox-strict-fields -O2 -fspec-constr -fdicts-cheap

executable mctest
      default-language:     Haskell2010
      main-is         :     Tests/McTest.hs
      hs-source-dirs  :     src
      ghc-options     :     -threaded -rtsopts
      other-modules   :     QuantLib.Math.InverseNormal
                            QuantLib.Methods.MonteCarlo
                            QuantLib.Methods.Pricer
                            QuantLib.Stochastic
                            QuantLib.Stochastic.Discretize
                            QuantLib.Stochastic.Process
                            QuantLib.Stochastic.Random
      build-depends   :     base,
                            hquantlib,
                            parallel,
                            mersenne-random-pure64,
                            containers,
                            time

Test-Suite main-test
        default-language:   Haskell2010
        type            :   exitcode-stdio-1.0
        main-is         :   Test.hs
        hs-source-dirs  :   src
        build-depends   :   base,
                            test-framework  >= 0.8                && < 0.9,
                            test-framework-hunit >= 0.3.0         && < 0.4.0,
                            test-framework-quickcheck2 >= 0.3.0.0 && < 0.4.0,
                            QuickCheck      >= 2.8.0              && < 3.0.0,
                            HUnit           >= 1.2.5.2            && < 2.0.0.0
